hphp/hack/test/typecheck/fc_enum_case_11.php.exp
File "fc_enum_case_11.php", line 14, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `B` (Typing[4019])
  File "fc_enum_case_11.php", line 3, characters 6-11:
  Enum declared here
